--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html lang="en">
 
 <head>
+    <!-- Required meta tags always come first -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+
+    <!-- Additional CSS must be placed after Bootstrap CSS -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
 <body>
 
-    <header class="jumbotron">
+    <header class="jumbotron jumbtron-fluid">
         <div class="container">
-            <div class="row">
+            <div class="row row-content align-items-center">
                 <div class="col">
                     <div>
                         <h1>NuCamp</h1>
@@ -24,9 +31,9 @@
     </header>
 
     <div class="container">
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
-                <h2>Discover & Review</h2>
+                <h2 class="text-sm-right">Discover & Review</h2>
             </div>
             <div class="col">
                 <h3>Our Campsites</h3>
@@ -34,7 +41,7 @@
             </div>
         </div>
         
-        <div class"row">
+        <div class"row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h2>Featured Campsites</h2>
             </div>
@@ -44,9 +51,9 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
-                <h2>Our Community Partners</h2>
+                <h2 class="text-sm-right">Our Community Partners</h2>
             </div>
             <div class="col">
                 <h3>Bootstrap Outfitters</h3>
@@ -57,7 +64,7 @@
 
     <footer>
         <div class="container">
-            <div class="row">
+            <div class="row row-content align-items-center">
                 <div class="col-4 col-sm-2 offset-1"></div>
                     <h5>Links</h5>
                     <ul class="list-unstyled">
@@ -68,13 +75,13 @@
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5">
-                    <h5>Social</h5>
+                    <h5 class="col-6 col-sm-5">Social</h5>
                     <a href="http://instagram.com/">Instagram</a>
                     <a href="http://facebook.com/">Facebook</a>
                     <a href="http://twitter.com/">Twitter</a>
                     <a href="http://youtube.com/">YouTube</a>
                 </div>
-                <div class="col-6 col-sm-5">
+                <div class="col-sm-4 text-center">
                     Tel: 1-206-555-1234<br />
                     Email: campsites@nucamp.co
                 </div>
